<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA</string>
    <string name="action_settings">Settings</string>
    <string name="create_trips">Create Trip</string>
    <string name="view_trip">View Trip</string>
    <string name="current_trip">Current Active Trip</string>
    <string name="button_arrive">Arrived</string>
    <string name="trip_name">Name</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_date">Date</string>
    <string name="trip_time">Time</string>
    <string name="trip_friends">Friends</string>
    <string name="location_form">location::location_type</string>
    <string name="button_contact">Add</string>
    <string name="button_search">Search</string>
    <string name="button_start">Start a trip!</string>
    <string name="create_trip">Create</string>
    <string name="cancel_trip">Cancel</string>
    <string name="title_activity_trip_history">TripHistoryActivity</string>
    <string name="trip_history">Trip History</string>

    <string name="my_info">My Infomation</string>
    <string name="others_info">Friends Information:</string>

    <string name="service_started">Location Service started</string>
    <string name="service_label">Location Service Label</string>


</resources>
