<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/serif"
        android:typeface="serif"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_trips"
        android:id="@+id/main_createTrip"
        android:layout_marginBottom="41dp"
        android:layout_above="@+id/main_viewTripHistory"
        android:layout_alignLeft="@+id/main_viewTripHistory"
        android:layout_alignStart="@+id/main_viewTripHistory"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trip_history"
        android:id="@+id/main_viewTripHistory"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
